# suomi-study-helper

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
suomi_study_helper/: config.py  main.py
