[project]
name = "suomi-study-helper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.*",
    "platformdirs==4.*",
    "joblib==1.*",
    "uralicNLP==2.*",
    "openai==1.*",
    "pydantic-settings==2.*"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
